--- a/MyApp001_linear_layout/app/src/main/res/values/strings.xml
+++ b/MyApp001_linear_layout/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyApp001_linear_layout</string>
+    <string name="btn_send">Odeslat</string>
+    <string name="btn_delete">Vymazat</string>
 </resources>
