--- a/MyApp007_fragments/app/src/main/res/values/strings.xml
+++ b/MyApp007_fragments/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyApp007_fragments</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Zdravím z fragmentu 01</string>
+    <string name="hello_blank_fragment_02">Zdravím z fragmentu 02</string>
 </resources>
